--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ text-align: center;
 text-transform: uppercase;
 }
 img{
-    border: 5px white;
+    border: 5px solid white;
     width: 100%;
     margin-top: 10px;
 }
@@ -23,7 +23,13 @@ p{
 body{
     background-color: black;
 }
+#div2{
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 15%;
+}
 .show{
     width: 100%;
     border:5px solid white
+    margin-top: 10px;
 }
